--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "customize-cra": "^0.9.1",
     "history": "^4.10.1",
-    "immer": "^6.0.5",
+    "immer": "^6.0.6",
     "polished": "^3.6.3",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.6",
-    "customize-cra": "^0.9.1",
     "react-dom": "^16.12.0",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
@@ -23,6 +24,8 @@
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "reduxsauce": "^1.1.2",
+    "seamless-immutable": "^7.1.4",
     "styled-components": "^5.1.0"
   },
   "scripts": {
