--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "history": "^4.10.1",
     "immer": "^6.0.6",
     "polished": "^3.6.3",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.12.0",
