--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.0",
+    "react-select": "^3.1.0",
     "react-toastify": "^6.0.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.3",
