--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adonisjs/websocket-client": "^1.0.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,7 +14,6 @@
     "polished": "^3.6.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.12.0",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
@@ -28,6 +28,7 @@
     "redux-saga": "^1.1.3",
     "reduxsauce": "^1.1.2",
     "seamless-immutable": "^7.1.4",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0"
   },
   "scripts": {
@@ -35,6 +36,14 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.test.js"
+    ],
+    "moduleNameMapper": {
+      "^~/(.*)": "<rootDir/src/$1"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,7 +61,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "24.9.0",
     "babel-plugin-root-import": "^6.5.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -63,6 +75,9 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^1.19.1"
+    "jest": "24.9.0",
+    "prettier": "^1.19.1",
+    "react-app-rewired": "^2.1.6",
+    "react-test-renderer": "^16.13.1"
   }
 }
